--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,24 @@
 p {
   font-family: Lato;
 }
+div{
+  margin: 0px;
+  background-color: aquamarine;
+  padding: 25px;
+  border-radius:46px;
+}
+h1,h3{
+  font-family:'Times New Roman', Times, serif;
+}
+table,td,tr{
+  border:5px solid white;
+  border-radius: 10px;
+  background-color:whitesmoke;
+
+}
+li{
+  padding: 8px;
+  border-radius: 8px;
+  border:2px solid white;
+background-color: brown;
+}
